--- a/code/hsec-tools/hsec-tools.cabal
+++ b/code/hsec-tools/hsec-tools.cabal
@@ -63,12 +63,13 @@ library
     , pandoc-types          >=1.22     && <2
     , parsec                >=3        && <4
     , pathwalk              >=0.3      && < 0.4
+    , pretty                >=1.0      && <1.2
     , process               >=1.6      && <1.7
     , safe                  >=0.3      && < 0.4
     , text                  >=1.2      && <3
     , template-haskell      >=2.16.0.0 && <2.23
     , time                  >=1.9      && <1.14
-    , toml-parser           ^>=2.0.1.0
+    , tomland               >=1.3      && <1.4
     , validation-selective  >=0.1      && <1
 
   hs-source-dirs:   src
