refactoring: extract tomland format

--- a/code/hsec-tools/hsec-tools.cabal
+++ b/code/hsec-tools/hsec-tools.cabal
@@ -39,6 +39,7 @@ library
     Security.Advisories.Generate.HTML
     Security.Advisories.Generate.TH
     Security.Advisories.Git
+    Security.Advisories.Format
     Security.Advisories.Parse
     Security.Advisories.Queries
 
