--- a/code/hsec-sync/hsec-sync.cabal
+++ b/code/hsec-sync/hsec-sync.cabal
@@ -27,22 +27,29 @@ library
   exposed-modules:  Security.Advisories.Sync
   other-modules:
     Security.Advisories.Sync.Atom
-    Security.Advisories.Sync.Git
+    Security.Advisories.Sync.Snapshot
+    Security.Advisories.Sync.Url
 
   build-depends:
     , base         >=4.14  && <4.20
+    , aeson        >=2.0   && <2.3
+    , bytestring            >=0.10    && <0.13
     , directory    >=1.3   && <1.4
+    , either       >=5.0   && <5.1
     , extra        >=1.7   && <1.8
     , feed         >=1.3   && <1.4
     , filepath     >=1.4   && <1.5
     , hsec-core    ^>= 0.2
     , http-client  >=0.7.0 && <0.8
     , lens         >=5.1   && <5.3
-    , process      >=1.6   && <1.7
+    , tar          >=0.5   && <0.7
+    , tar-conduit  >=0.3   && <0.5
     , text         >=1.2   && <3
     , time         >=1.9   && <1.14
+    , temporary    ==1.*
     , transformers >=0.5   && <0.7
     , wreq         >=0.5   && <0.6
+    , zlib         >=0.6   && <0.8
 
   hs-source-dirs:   src
   default-language: Haskell2010
@@ -83,7 +90,6 @@ test-suite spec
     , directory
     , hsec-sync
     , filepath
-    , process
     , tasty        <1.5
     , tasty-hunit  <0.11
     , temporary    ==1.*
