--- a/code/hsec-tools/hsec-tools.cabal
+++ b/code/hsec-tools/hsec-tools.cabal
@@ -73,12 +73,13 @@ library
     , parsec                >=3        && <4
     , pathwalk              >=0.3      && < 0.4
     , pretty                >=1.0      && <1.2
+    , prettyprinter         >=1.7      && <1.8
     , process               >=1.6      && <1.7
     , safe                  >=0.3      && < 0.4
     , text                  >=1.2      && <3
     , template-haskell      >=2.16.0.0 && <2.23
     , time                  >=1.9      && <1.14
-    , tomland               >=1.3      && <1.4
+    , toml-parser           >=2.0.0.0  && <2.1
     , validation-selective  >=0.1      && <1
 
   hs-source-dirs:   src
