--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -82,7 +82,7 @@ jobs:
           docker run --rm -v $PWD:/repo --workdir /repo haskell/hsec-tools:latest /bin/hsec-tools generate-snapshot . snapshot
           diff -r advisories snapshot/advisories | grep -v gitkeep | grep -v 'Only in advisories: reserved' | grep Only && echo 'Some advisories have been created/deleted' && exit 1 || exit 0
       - name: Publish snapshot data
-        if: ${{ github.event_name == 'push' && github.ref_name == 'main' && github.repository == 'haskell/security-advisories' }}
+        if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_SHA: ${{ github.sha }}
         run: |
